<resources>
    <string name="app_name">Commonweal</string>
    <string name="action_search">查找</string>

    <string name="label_billSK_one">1</string>
    <string name="label_billSK_two">2</string>
    <string name="label_billSK_three">3</string>
    <string name="label_billSK_four">4</string>
    <string name="label_billSK_five">5</string>
    <string name="label_billSK_six">6</string>
    <string name="label_billSK_seven">7</string>
    <string name="label_billSK_eight">8</string>
    <string name="label_billSK_nine">9</string>
    <string name="label_billSK_zero">0</string>
    <string name="label_billSK_dot">.</string>
    <string name="label_billSK_backspace">删除</string>
    <string name="label_billSK_ok">确定</string>
    <string name="label_billSK_equal">=</string>
    <string name="title_activity_my_set">MySetActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>
